~ Changed name from sum-section to summary-section

--- a/public/partials/step3.ejs
+++ b/public/partials/step3.ejs
@@ -1,23 +1,9 @@
-<!-- Dynamic Summary Section -->
-<!--<h2 class="mt-4 mb-3">Summary</h2>
-<div id="summary-section" class="mb-3">
-  <div class="mb-3">
-    <label for="summaryObjective" class="form-label">Objective</label>
-    <textarea name="summaryObjective" id="summaryObjective" class="form-control"></textarea>
-  </div>
-  <div id="summary-solutions"></div>
-  <button type="button" class="btn btn-primary" onclick="addSummarySolution()">Add Solution</button>
-</div>-->
-<!--<h2 class="mt-4 mb-3">Summary Information</h2>
-<div class="row" id="summary-section">
-  <button type="button" class="btn btn-primary" onclick="addSummarySection()">Add Room</button>
-</div>-->
 <h2 class="mt-4 mb-3">Summary Information</h2>
 <div class="row" id="summary-section">
 
   <!-- Preloaded Sections -->
   <div class="col-md-6">
-    <div class="card nested-section sum-section mb-2" data-section="Objective">
+    <div class="card nested-section summary-section mb-2" data-section="Objective">
       <div class="input-group p-2">
         <div class="dropdown">
           <button class="btn btn-outline-secondary dropdown-toggle" type="button"
@@ -50,7 +36,7 @@
     </div>
 
     <!-- Repeat for Problem, Solution, and Value -->
-    <div class="card nested-section sum-section mb-2" data-section="Problem">
+    <div class="card nested-section summary-section mb-2" data-section="Problem">
       <div class="input-group p-2">
         <div class="dropdown">
           <button class="btn btn-outline-secondary dropdown-toggle" type="button"
@@ -83,7 +69,7 @@
     </div>
   </div>
   <div class="col-md-6">
-    <div class="card nested-section sum-section mb-2" data-section="Solution">
+    <div class="card nested-section summary-section mb-2" data-section="Solution">
       <div class="input-group p-2">
         <div class="dropdown">
           <button class="btn btn-outline-secondary dropdown-toggle" type="button"
@@ -116,7 +102,7 @@
     </div>
 
     <!-- Repeat for Problem, Solution, and Value -->
-    <div class="card nested-section sum-section mb-2" data-section="Value">
+    <div class="card nested-section summary-section mb-2" data-section="Value">
       <div class="input-group p-2">
         <div class="dropdown">
           <button class="btn btn-outline-secondary dropdown-toggle" type="button"
