--- a/public/partials/step5.ejs
+++ b/public/partials/step5.ejs
@@ -3,5 +3,5 @@
 <div id="investment-section">
   <button type="button" class="btn btn-primary mb-3" onclick="addInvestSection()">Add Investment
     Section</button>
-  <div id="investment-container"></div>
+  <div id="investment-container" class="section-container"></div>
 </div>
