--- a/public/views/form.ejs
+++ b/public/views/form.ejs
@@ -12,6 +12,8 @@
   <main>
     <div class="container">
       <form id="pdf-form" class="container mt-4">
+        <!-- Templates for dynamic sections -->
+        <%- include('../partials/sectionTmpls.ejs'); %>
         <!-- Basic Information -->
         <div class="tab">
           <%- include('../partials/step1.ejs'); %>
