--- a/public/partials/step1.ejs
+++ b/public/partials/step1.ejs
@@ -30,8 +30,7 @@
       <!-- Previous control -->
       <button
         class="carousel-control-prev"
-        type="button"
-        data-bs-target="#thumbnail-carousel"
+        type="button" data-bs-target="#thumbnail-carousel"
         data-bs-slide="prev"
       >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
