--- a/public/partials/sectionTmpls.ejs
+++ b/public/partials/sectionTmpls.ejs
@@ -30,7 +30,7 @@
           <button type="button" class="btn btn-primary" onclick="addInvestItem(this)">Add Item</button>
         </div>
       </div>
-      <div class="col-6">
+      <div class="col-md-6">
         <div class="input-group">
           <span class="input-group-text">Price</span><input type="text" name="investPrice" value="${price}" class="form-control" /></label>
           <button type="button" class="btn btn-danger" onclick="this.closest('.invest-section').remove()">Remove Section</button>
@@ -38,7 +38,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="invest-items col-md"></div>
+      <div class="col">
+        <div class="invest-items"></div>
+      </div>
     </div>
   </div>
 </template>
@@ -47,6 +49,7 @@
   <div class="input-group px-2 pb-2" draggable="true">
     <span class="input-group-text">Item</span>
     <textarea class="form-control" rows="1" name="investItem" required></textarea>
+    <!--<input type="text" name="investItem" class="form-control" required />-->
     <button type="button" class="btn btn-danger" onclick="this.parentNode.remove()"><i class="bi bi-x-square-fill"></i></button>
   </div>
 </template>
